--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1 id="top-heading">🏆LEADERBOARD🏆</h1>
+    <div id="root">
+      
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
